--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-DB_HOST=''
-DB_PORT=''
-DB_USER=''
-DB_PASS=''
-DB_NAME=''
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
 
-PORT=''
+PORT=
+CAMINHO=''
+PROJETOID=''
+SUBSCRIPTIONNAME=''
